# demo_bazel_earthly_draftdev

./: BUILD.bazel  README.md  WORKSPACE.bazel  clean_user_database.py  custom_rules.bzl  requirements.txt
user_app/: BUILD.bazel  crud.py  database.py  main.py  models.py  run.py  schemas.py  test.py
user_app/tests/: test_main.py
