#genrule(
#    name = "version",
#    outs = ["version.txt"],
#    # alternative: "sed -n 's/STABLE_BUILD_GIT_DESCRIBE //p' bazel-out/stable-status.txt"
#    cmd_bash = "grep -Po '^STABLE_BUILD_GIT_DESCRIBE\\s+\\K.*' bazel-out/stable-status.txt |tee $@",
#    stamp = True,
#)

load("//:custom_rules.bzl", "build_with_my_custom_rule")
build_with_my_custom_rule(name="build_me")
