workspace(
    name = "fast-api-demo",
)

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# -----------------------------------------------------------------
#                          Python Rules
# -----------------------------------------------------------------
http_archive(
    name = "rules_python",
    sha256 = "9fcf91dbcc31fde6d1edb15f117246d912c33c36f44cf681976bd886538deba6",
    strip_prefix = "rules_python-0.8.0",
    url = "https://github.com/bazelbuild/rules_python/archive/refs/tags/0.8.0.tar.gz",
)

http_archive(
    name = "downloaded-python",
    url = "https://www.python.org/ftp/python/3.10.0/python-3.10.0rc1-embed-arm64.zip",
    build_file = "//:BUILD.my_downloaded_python"
)

load("@rules_python//python:pip.bzl", "pip_install")
load("@rules_python//python:repositories.bzl", "python_register_toolchains")

python_register_toolchains(
    name = "python3_10",
    # Available versions are listed in @rules_python//python:versions.bzl.
    # We recommend using the same version your team is already standardized on.
    python_version = "3.10",
)

load("@python3_10//:defs.bzl", "interpreter")

# Create a central external repo, @python_external_deps, that contains Bazel targets for all the
# third-party packages specified in the requirements.txt file.
pip_install(
    name = "python_external_deps",
    python_interpreter_target = interpreter,
    requirements = "//:requirements.txt",
)
